--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-158790792-1');
     </script>
 
@@ -31,8 +30,8 @@
     <h1 class='load'>Full-Stack Web Developer</h1>
 
     <!-- landing page -->
-    <div class=' boot'>
-    <div id="homepage-image-div" class='land'></div>
+    <div class='homepage-image-fullscreen'>
+    <div class='homepage-image-div'></div>
     </div>
     <div class="navbar" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
@@ -42,9 +41,9 @@
     </div>
 
     <!-- javascript -->
-    <script src="scripts/load_screen.js"></script>
+    <script src="scripts/load_and_homepage.js"></script>
     <script src="scripts/nav_bar.js"></script>
-    <script src="scripts/code_page_color.js"></script>
+
 
   </body>
 </html>
