--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   </head>
   <body id='about-body'>
     <p class='center-text'>oliver inglis is a london based full stack web developer. working primarily in ruby on rails, es6 javascript, react, redux, html, css, sql, git, github and heroku. <a href="https://github.com/oginglis" class='github-decoration'>github >> oginglis</a></p>
-    <div class="navbar reveal " id="myNavbar">
+    <div class="navbar" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projects" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
