--- a/icarebnb.html
+++ b/icarebnb.html
@@ -50,7 +50,7 @@ Whether those in need of help are already homeless or at risk of being on the st
       </div>
     </div>
 
-    <div class="navbar reveal " id="myNavbar">
+    <div class="navbar" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projects" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
@@ -60,6 +60,5 @@ Whether those in need of help are already homeless or at risk of being on the st
   </body>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
-  <script src="scripts/image_loader.js"></script>
   <script src="scripts/modal-video.js"></script>
 </html>
