--- a/projects.html
+++ b/projects.html
@@ -26,44 +26,45 @@
 
   </head>
   <body id='about-body'>
-    <div class='code-card'>
-      <div class='main-card-text'>
-        <a href="icarebnb"><h1 class='project-title'>ICAREBNB <span class='app-type-projects'>[web-app]</span></h1></a>
-        <a href="icarebnb"><h2 class='index-tech'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2></a>
-        <a href="icarebnb"><p class='index-body-text'>Designed, implemented and shipped to production a Rails prototype app enabling charities to source temporary
-        accommodation for those most in need. Features include: integrated geocoder API and Pusher JavaScript live-chat.</p></a>
+    <div class="cards-wrapper">
+      <div class='code-card'>
+        <div class='main-card-text'>
+          <a href="icarebnb"><h1 class='project-title'>ICAREBNB <span class='app-type-projects'>[web-app]</span></h1></a>
+          <a href="icarebnb"><h2 class='index-tech'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2></a>
+          <a href="icarebnb"><p class='index-body-text'>Designed, implemented and shipped to production a Rails prototype app enabling charities to source temporary
+          accommodation for those most in need. Features include: integrated geocoder API and Pusher JavaScript live-chat.</p></a>
+        </div>
+        <p class='date'>2019</p>
       </div>
-      <p class='date'>2019</p>
-    </div>
 
-    <div class='code-card'>
-      <div class='main-card-text'>
-        <a href="reactvid"><h1 class='project-title'>REACT VID <span class='app-type-projects'>[react-app]</span></h1></a>
-        <a href="reactvid"><h2 class='index-tech'>React, ES6 JavaScript, Scss, Html</h2></a>
-        <a href="reactvid"><p class='index-body-text'>Developed a responsive React app connected to YouTube's Data Api allowing users to search through and watch their
-        favourite videos.</p></a>
+      <div class='code-card'>
+        <div class='main-card-text'>
+          <a href="reactvid"><h1 class='project-title'>REACT VID <span class='app-type-projects'>[react-app]</span></h1></a>
+          <a href="reactvid"><h2 class='index-tech'>React, ES6 JavaScript, Scss, Html</h2></a>
+          <a href="reactvid"><p class='index-body-text'>Developed a responsive React app connected to YouTube's Data Api allowing users to search through and watch their
+          favourite videos.</p></a>
+        </div>
+        <p class='date'>2020</p>
       </div>
-      <p class='date'>2020</p>
-    </div>
 
-    <div class='code-card'>
-      <div class='main-card-text'>
-        <a href="swipe-chef"><h1 class='project-title'>SWIPE CHEF <span class='app-type-projects'>[web-app]</span></h1></a>
-        <a href="swipe-chef"><h2 class='index-tech'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku</h2></a>
-        <a href="swipe-chef"><p class='index-body-text'>Designed, implemented and shipped to production a Rails prototype app inspiring hungry foodies with tasty recipes they can swipe between, choose and cook. The project implements scraping of several popular food websites, including BBC Good Food. Features include: swipable Javascript interface, scraping and integrated API.</p></a>
+      <div class='code-card'>
+        <div class='main-card-text'>
+          <a href="swipe-chef"><h1 class='project-title'>SWIPE CHEF <span class='app-type-projects'>[web-app]</span></h1></a>
+          <a href="swipe-chef"><h2 class='index-tech'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku</h2></a>
+          <a href="swipe-chef"><p class='index-body-text'>Designed, implemented and shipped to production a Rails prototype app inspiring hungry foodies with tasty recipes they can swipe between, choose and cook. The project implements scraping of several popular food websites, including BBC Good Food. Features include: swipable Javascript interface, scraping and integrated API.</p></a>
+        </div>
+        <p class='date'>2019</p>
       </div>
-      <p class='date'>2019</p>
-    </div>
 
-    <div class='code-card'>
-      <div class='main-card-text'>
-        <a href="javascript-challenges"><h1 class='project-title'>ES6 CHALLENGES <span class='app-type-projects'>[code-challenge]</span></h1></a>
-        <a href="javascript-challenges"><h2 class='index-tech'>ES6 JavaScript, Html, Scss</h2></a>
-        <a href="javascript-challenges"><p class='index-body-text'>My solutions to the 30 day Vanilla JS Challenges. Projects include: JavaScript Clock, JavaScript DrumKit</p></a>
+      <div class='code-card'>
+        <div class='main-card-text'>
+          <a href="javascript-challenges"><h1 class='project-title'>ES6 CHALLENGES <span class='app-type-projects'>[code-challenge]</span></h1></a>
+          <a href="javascript-challenges"><h2 class='index-tech'>ES6 JavaScript, Html, Scss</h2></a>
+          <a href="javascript-challenges"><p class='index-body-text'>My solutions to the 30 day Vanilla JS Challenges. Projects include: JavaScript Clock, JavaScript DrumKit</p></a>
+        </div>
+        <p class='date'>2020</p>
       </div>
-      <p class='date'>2020</p>
     </div>
-
 
     <div class="navbar reveal " id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
