--- a/reactvid.html
+++ b/reactvid.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <div class="navbar reveal " id="myNavbar">
+    <div class="navbar" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projects" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
@@ -58,7 +58,6 @@
   </body>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
-  <script src="scripts/image_loader.js"></script>
   <script src="scripts/modal-video.js"></script>
 </html>
 
