--- a/swipe-chef.html
+++ b/swipe-chef.html
@@ -50,7 +50,7 @@ swipe to find recipes to cook. The project implements scraping of several popula
       </div>
     </div>
 
-    <div class="navbar reveal " id="myNavbar">
+    <div class="navbar" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projects" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
@@ -60,7 +60,6 @@ swipe to find recipes to cook. The project implements scraping of several popula
   </body>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
-  <script src="scripts/image_loader.js"></script>
   <script src="scripts/modal-video.js"></script>
 </html>
 
