nav bar updates

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="navbar reveal " id="myNavbar">
+    <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projects" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
