--- a/icarebnb.html
+++ b/icarebnb.html
@@ -50,7 +50,7 @@ Whether those in need of help are already homeless or at risk of being on the st
       </div>
     </div>
 
-    <div class="navbar" id="myNavbar">
+    <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projects" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
