--- a/swipe-chef.html
+++ b/swipe-chef.html
@@ -50,7 +50,7 @@ swipe to find recipes to cook. The project implements scraping of several popula
       </div>
     </div>
 
-    <div class="navbar" id="myNavbar">
+    <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projects" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
