lang attribute added

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id='big-html'>
+<html id='big-html' lang="en">
   <head>
     <meta charset="UTF-8">
     <title>sᴉlƃuᴉ ɹǝʌᴉlo</title>
@@ -20,7 +20,6 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-158790792-1');
     </script>
   </head>
@@ -32,10 +31,7 @@
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
-
   </body>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
-
-
 </html>
