--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id='big-html'>
+<html id='big-html' lang="en">
   <head>
     <meta charset="UTF-8">
     <title>sᴉlƃuᴉ ɹǝʌᴉlo</title>
