--- a/three.html
+++ b/three.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html id='big-html' lang="en">
   <head>
@@ -21,42 +20,36 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-158790792-1');
     </script>
-
   </head>
   <body id='about-body'>
     <div class='show-page-wrapper'>
       <div class='show-page-text-left'>
-        <a href="projects"><h1 class='show-page-title'>SWIPE CHEF<span class='app-type'>[web-app]</span></h1></a>
-        <h2 class='show-tech'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Web Scraping, Heroku </h2>
-        <p class='show-body-text'>Designed, implemented and shipped to production a Rails prototype app with a Tinder-style interface enabling users to filter their culinary preferences and
-swipe to find recipes to cook. The project implements scraping of several popular food websites, including BBC Good Food. Features include: swipable JavaScript interface, scraping and integrated API.</p>
-        <a href="http://www.swipechef.com/" target="_blank"><p class='facts'>WEBSITE: WWW.SWIPECHEF.COM</p></a>
-        <a href="https://github.com/ThreeOneNine/swipe-chef"  target="_blank"><p class='facts'>GITHUB REPO: WWW.GITHUB.COM/THREEONENINE/SWIPE-CHEF</p></a>
-        <p class='facts js-modal-btn' data-video-id="384196561">VIMEO SITE DEMO</p>
-        <p class='date-show'>2019</p>
+        <a href="projects"><h1 class='show-page-title'>REACT VID<span class='app-type'>[react-app]</span></h1></a>
+        <h2 class='show-tech'>React, ES6 JavaScript, Scss, Html</h2>
+        <p class='show-body-text'>Developed a responsive React app connected to YouTube's Data Api allowing users to search through and watch their
+        favourite videos.</p>
+        <a href="https://github.com/oginglis/youtube-react"  target="_blank"><p class='facts'>GITHUB REPO: HTTPS://GITHUB.COM/OGINGLIS/YOUTUBE-REACT</p></a>
+        <p class='facts js-modal-btn' data-video-id="392197306">VIMEO SITE DEMO</p>
+        <p class='date-show'>2020</p>
         <a href='projects' class='back-to-projects'><< back to projects</a>
       </div>
-
       <div class='show-page-images-right'>
         <div>
-          <img class='show-image js-modal-btn' data-video-id="384196561" src="./images/swipechef.png" alt="">
+          <img class='show-image js-modal-btn' data-video-id="392197306" src="./images/reactvid.png" alt="">
           <figcaption>
 
           </figcaption>
         </div>
       </div>
     </div>
-
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projects" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
-
   </body>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
