initial three js Integration

--- a/three.html
+++ b/three.html
@@ -24,35 +24,17 @@
     </script>
   </head>
   <body id='about-body'>
-    <div class='show-page-wrapper'>
-      <div class='show-page-text-left'>
-        <a href="projects"><h1 class='show-page-title'>REACT VID<span class='app-type'>[react-app]</span></h1></a>
-        <h2 class='show-tech'>React, ES6 JavaScript, Scss, Html</h2>
-        <p class='show-body-text'>Developed a responsive React app connected to YouTube's Data Api allowing users to search through and watch their
-        favourite videos.</p>
-        <a href="https://github.com/oginglis/youtube-react"  target="_blank"><p class='facts'>GITHUB REPO: HTTPS://GITHUB.COM/OGINGLIS/YOUTUBE-REACT</p></a>
-        <p class='facts js-modal-btn' data-video-id="392197306">VIMEO SITE DEMO</p>
-        <p class='date-show'>2020</p>
-        <a href='projects' class='back-to-projects'><< back to projects</a>
-      </div>
-      <div class='show-page-images-right'>
-        <div>
-          <img class='show-image js-modal-btn' data-video-id="392197306" src="./images/reactvid.png" alt="">
-          <figcaption>
 
-          </figcaption>
-        </div>
-      </div>
-    </div>
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projects" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
-  </body>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
-  <script src="scripts/modal-video.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+  <script src="scripts/three_script.js"></script>
+  </body>
 </html>
 
