food dash added

--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,15 @@
         <p class='date'>2019</p>
       </div>
 
+       <div class='code-card'>
+        <div class='main-card-text'>
+          <a href="food-dash"><h1 class='project-title'>FOOD DASH <span class='app-type-projects'>[react-app]</span></h1></a>
+          <a href="food-dash"><h2 class='index-tech'>React, React-Scroll, ES6 JavaScript, Scss, Html</h2></a>
+          <a href="food-dash"><p class='index-body-text'>Responsive React food-delivery app. Implements 'React-Scroll' and mobile-friendly design.</p></a>
+        </div>
+        <p class='date'>2020</p>
+      </div>
+
       <div class='code-card'>
         <div class='main-card-text'>
           <a href="reactvid"><h1 class='project-title'>REACT VID <span class='app-type-projects'>[react-app]</span></h1></a>
