website link added for food dash

--- a/food-dash.html
+++ b/food-dash.html
@@ -31,6 +31,7 @@
         <a href="projects"><h1 class='show-page-title'>FOOD DASH<span class='app-type'>[react-app]</span></h1></a>
         <h2 class='show-tech'>React, React-Scroll, ES6 JavaScript</h2>
         <p class='show-body-text'>Responsive React food-delivery app. Implements 'React-Scroll' and mobile-friendly design.</p>
+        <a href="https://oginglis.github.io/react-food-delivery/" target="_blank"><p class='facts'>WEBSITE: HTTPS://OGINGLIS.GITHUB.IO/REACT-FOOD-DELIVERY/</p></a>
         <a href="https://github.com/oginglis/youtube-react"  target="_blank"><p class='facts'>GITHUB REPO: HTTPS://GITHUB.COM/OGINGLIS/REACT-FOOD-DELIVERY</p></a>
         <p class='facts js-modal-btn' data-video-id="395780253">VIMEO SITE DEMO</p>
         <p class='date-show'>2020</p>
