--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
     <div class="cards-wrapper">
       <div class='code-card'>
         <div class='main-card-text'>
-          <a href="icarebnb"><h1 class='project-title'>ICAREBNB <span class='app-type-projects'>[web-app]</span></h1></a>
+          <a href="icarebnb"><h1 class='project-title'>ICAREBNB <span class='app-type-projects'>[rails-app]</span></h1></a>
           <a href="icarebnb"><h2 class='index-tech'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2></a>
           <a href="icarebnb"><p class='index-body-text'>Designed, implemented and shipped to production a Rails prototype app enabling charities to source temporary
           accommodation for those most in need. Features include: integrated geocoder API and Pusher JavaScript live-chat.</p></a>
