--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="navbar" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
-      <a href="projects.html" class='code-navbar'>CODE</a>
+      <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about.html">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
