--- a/javascript-challenges.html
+++ b/javascript-challenges.html
@@ -28,14 +28,14 @@
   <body id='about-body'>
     <div class='show-page-wrapper'>
       <div class='show-page-text-left'>
-        <a href="projects"><h1 class='show-page-title'>ES6 CHALLENGES<span class='app-type'>[code-challenge]</span></h1></a>
+        <a href="projectstwo"><h1 class='show-page-title'>ES6 CHALLENGES<span class='app-type'>[code-challenge]</span></h1></a>
         <h2 class='show-tech'>ES6 JavaScript, Html, Scss</h2>
         <p class='show-body-text'>My solutions to the 30 day Vanilla JS Challenges. Projects include: JavaScript Clock, JavaScript DrumKit, interactive CSS.</p>
         <a href="https://oginglis.github.io/javascript-challenges/index.html" target="_blank"><p class='facts'>WEBSITE: WWW.OGINGLIS.GITHUB.IO/JAVASCRIPT-CHALLENGES/INDEX.HTML</p></a>
         <a href="https://github.com/oginglis/javascript-challenges"  target="_blank"><p class='facts'>GITHUB REPO: WWW.GITHUB.COM/OGINGLIS/JAVASCRIPT-CHALLENGES</p></a>
         <p class='facts js-modal-btn' data-video-id="392200676">VIMEO: SITE DEMO</p>
         <p class='date-show'>2020</p>
-        <a href='projects' class='back-to-projects'><< back to projects</a>
+        <a href="projectstwo" class='back-to-projects'><< back to projects</a>
       </div>
       <div class='show-page-images-right'>
 
@@ -50,7 +50,7 @@
 
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
-      <a href="projects" class='code-navbar'>CODE</a>
+      <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
