--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <p class='center-text'>oliver inglis is a london based full stack web developer. working primarily in ruby on rails, es6 javascript, react, redux, html, css, sql, git, github and heroku. <a href="https://github.com/oginglis" class='github-decoration'>github >> oginglis</a></p>
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
-      <a href="projects" class='code-navbar'>CODE</a>
+      <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
