--- a/food-dash.html
+++ b/food-dash.html
@@ -28,14 +28,14 @@
   <body id='about-body'>
     <div class='show-page-wrapper'>
       <div class='show-page-text-left'>
-        <a href="projects"><h1 class='show-page-title'>FOOD DASH<span class='app-type'>[react-app]</span></h1></a>
+        <a href="projectstwo"><h1 class='show-page-title'>FOOD DASH<span class='app-type'>[react-app]</span></h1></a>
         <h2 class='show-tech'>React, React-Scroll, ES6 JavaScript</h2>
         <p class='show-body-text'>Responsive React food-delivery app. Implements 'React-Scroll' and mobile-friendly design.</p>
         <a href="https://oginglis.github.io/react-food-delivery/" target="_blank"><p class='facts'>WEBSITE: HTTPS://OGINGLIS.GITHUB.IO/REACT-FOOD-DELIVERY/</p></a>
         <a href="https://github.com/oginglis/youtube-react"  target="_blank"><p class='facts'>GITHUB REPO: HTTPS://GITHUB.COM/OGINGLIS/REACT-FOOD-DELIVERY</p></a>
         <p class='facts js-modal-btn' data-video-id="395780253">VIMEO SITE DEMO</p>
         <p class='date-show'>2020</p>
-        <a href='projects' class='back-to-projects'><< back to projects</a>
+        <a href="projectstwo" class='back-to-projects'><< back to projects</a>
       </div>
 
       <div class='show-page-images-right'>
@@ -50,7 +50,7 @@
 
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
-      <a href="projects" class='code-navbar'>CODE</a>
+      <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
