--- a/swipe-chef.html
+++ b/swipe-chef.html
@@ -29,7 +29,7 @@
   <body id='about-body'>
     <div class='show-page-wrapper'>
       <div class='show-page-text-left'>
-        <a href="projects"><h1 class='show-page-title'>SWIPE CHEF<span class='app-type'>[web-app]</span></h1></a>
+        <a href="projectstwo"><h1 class='show-page-title'>SWIPE CHEF<span class='app-type'>[web-app]</span></h1></a>
         <h2 class='show-tech'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Web Scraping, Heroku </h2>
         <p class='show-body-text'>Designed, implemented and shipped to production a Rails prototype app with a Tinder-style interface enabling users to filter their culinary preferences and
 swipe to find recipes to cook. The project implements scraping of several popular food websites, including BBC Good Food. Features include: swipable JavaScript interface, scraping and integrated API.</p>
@@ -37,7 +37,7 @@ swipe to find recipes to cook. The project implements scraping of several popula
         <a href="https://github.com/ThreeOneNine/swipe-chef"  target="_blank"><p class='facts'>GITHUB REPO: WWW.GITHUB.COM/THREEONENINE/SWIPE-CHEF</p></a>
         <p class='facts js-modal-btn' data-video-id="384196561">VIMEO SITE DEMO</p>
         <p class='date-show'>2019</p>
-        <a href='projects' class='back-to-projects'><< back to projects</a>
+        <a href="projectstwo" class='back-to-projects'><< back to projects</a>
       </div>
 
       <div class='show-page-images-right'>
@@ -52,7 +52,7 @@ swipe to find recipes to cook. The project implements scraping of several popula
 
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
-      <a href="projects" class='code-navbar'>CODE</a>
+      <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
