--- a/projectstwo.html
+++ b/projectstwo.html
@@ -38,32 +38,32 @@
       <div class="project2-card-wrapper">
         <a class="image-project-link" href="food-dash"><img class="project2-card-image" src="./images/fooddash.png" alt=""></a>
         <div class="project2-card-text-wrapper">
-          <h1 class='project2-card-title'>FOOD DASH </h1>
-          <p><span class='project2-card-app-type'>[react-app]</span></p>
+          <a href="food-dash"><h1 class='project2-card-title'>FOOD DASH </h1></a>
+          <a href="food-dash"><p><span class='project2-card-app-type'>[react-app]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         </div>
       </div>
       <div class="project2-card-wrapper">
         <a class="image-project-link" href="swipe-chef"><img class="project2-card-image" src="./images/swipechef.png" alt=""></a>
         <div class="project2-card-text-wrapper">
-          <h1 class='project2-card-title'>SWIPE CHEF </h1>
-          <p><span class='project2-card-app-type'>[web-app]</span></p>
+         <a href="swipe-chef"> <h1 class='project2-card-title'>SWIPE CHEF </h1></a>
+          <a href="swipe-chef"><p><span class='project2-card-app-type'>[web-app]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         </div>
       </div>
       <div class="project2-card-wrapper">
         <a class="image-project-link" href="javascript-challenges"><img class="project2-card-image" src="./images/js_challenges.png" alt=""></a>
         <div class="project2-card-text-wrapper">
-          <h1 class='project2-card-title'>ES6 CHALLENGES </h1>
-          <p><span class='project2-card-app-type'>[code-challenge]</span></p>
+          <a href="javascript-challenges"><h1 class='project2-card-title'>ES6 CHALLENGES </h1></a>
+          <a href="javascript-challenges"><p><span class='project2-card-app-type'>[code-challenge]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         </div>
       </div>
       <div class="project2-card-wrapper">
-        <a class="image-project-link" href="icarebnb"><img class="project2-card-image" src="./images/reactvid.png" alt=""></a>
+        <a class="image-project-link" href="reactvid"><img class="project2-card-image" src="./images/reactvid.png" alt=""></a>
         <div class="project2-card-text-wrapper">
-          <h1 class='project2-card-title'>REACT VID </h1>
-          <p><span class='project2-card-app-type'>[react-app]</span></p>
+          <a href="reactvid"><h1 class='project2-card-title'>REACT VID </h1></a>
+          <a href="reactvid"><p><span class='project2-card-app-type'>[react-app]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         </div>
       </div>
@@ -73,7 +73,7 @@
 
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
-      <a href="projects" class='code-navbar'>CODE</a>
+      <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
