--- a/javascript-challenges.html
+++ b/javascript-challenges.html
@@ -20,10 +20,8 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-158790792-1');
     </script>
-
   </head>
   <body id='about-body'>
     <div class='show-page-wrapper'>
@@ -38,7 +36,6 @@
         <a href="projectstwo" class='back-to-projects'><< back to projects</a>
       </div>
       <div class='show-page-images-right'>
-
         <div>
           <img class='show-image js-modal-btn' data-video-id="392200676" src="./images/js_challenges.png" alt="">
           <figcaption>
@@ -47,15 +44,14 @@
         </div>
       </div>
     </div>
-
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
-
   </body>
+  <script src="scripts/color_load_on_other_pages.js"></script>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
   <script src="scripts/modal-video.js"></script>
