--- a/projects.html
+++ b/projects.html
@@ -20,10 +20,8 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-158790792-1');
     </script>
-
   </head>
   <body id='about-body'>
     <div class="cards-wrapper">
@@ -36,7 +34,6 @@
         </div>
         <p class='date'>2019</p>
       </div>
-
        <div class='code-card'>
         <div class='main-card-text'>
           <a href="food-dash"><h1 class='project-title'>FOOD DASH <span class='app-type-projects'>[react-app]</span></h1></a>
@@ -45,7 +42,6 @@
         </div>
         <p class='date'>2020</p>
       </div>
-
       <div class='code-card'>
         <div class='main-card-text'>
           <a href="reactvid"><h1 class='project-title'>REACT VID <span class='app-type-projects'>[react-app]</span></h1></a>
@@ -55,7 +51,6 @@
         </div>
         <p class='date'>2020</p>
       </div>
-
       <div class='code-card'>
         <div class='main-card-text'>
           <a href="swipe-chef"><h1 class='project-title'>SWIPE CHEF <span class='app-type-projects'>[web-app]</span></h1></a>
@@ -64,7 +59,6 @@
         </div>
         <p class='date'>2019</p>
       </div>
-
       <div class='code-card'>
         <div class='main-card-text'>
           <a href="javascript-challenges"><h1 class='project-title'>ES6 CHALLENGES <span class='app-type-projects'>[code-challenge]</span></h1></a>
@@ -74,15 +68,14 @@
         <p class='date'>2020</p>
       </div>
     </div>
-
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
-
   </body>
+  <script src="scripts/color_load_on_other_pages.js"></script>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
 </html>
