--- a/projectstwo.html
+++ b/projectstwo.html
@@ -20,10 +20,8 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-158790792-1');
     </script>
-
   </head>
   <body id='about-body'>
     <div class="project2-wrapper-all-projects">
@@ -67,18 +65,15 @@
           <h2 class='project2-card-techlist'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         </div>
       </div>
-
     </div>
-
-
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
-
   </body>
+  <script src="scripts/color_load_on_other_pages.js"></script>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
 </html>
