--- a/swipe-chef.html
+++ b/swipe-chef.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html id='big-html' lang="en">
   <head>
@@ -21,10 +20,8 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-158790792-1');
     </script>
-
   </head>
   <body id='about-body'>
     <div class='show-page-wrapper'>
@@ -32,32 +29,25 @@
         <a href="projectstwo"><h1 class='show-page-title'>SWIPE CHEF<span class='app-type'>[web-app]</span></h1></a>
         <h2 class='show-tech'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Web Scraping, Heroku </h2>
         <p class='show-body-text'>Designed, implemented and shipped to production a Rails prototype app with a Tinder-style interface enabling users to filter their culinary preferences and
-swipe to find recipes to cook. The project implements scraping of several popular food websites, including BBC Good Food. Features include: swipable JavaScript interface, scraping and integrated API.</p>
+        swipe to find recipes to cook. The project implements scraping of several popular food websites, including BBC Good Food. Features include: swipable JavaScript interface, scraping and integrated API.</p>
         <a href="http://www.swipechef.com/" target="_blank"><p class='facts'>WEBSITE: WWW.SWIPECHEF.COM</p></a>
         <a href="https://github.com/ThreeOneNine/swipe-chef"  target="_blank"><p class='facts'>GITHUB REPO: WWW.GITHUB.COM/THREEONENINE/SWIPE-CHEF</p></a>
         <p class='facts js-modal-btn' data-video-id="384196561">VIMEO SITE DEMO</p>
         <p class='date-show'>2019</p>
         <a href="projectstwo" class='back-to-projects'><< back to projects</a>
       </div>
-
       <div class='show-page-images-right'>
-        <div>
-          <img class='show-image js-modal-btn' data-video-id="384196561" src="./images/swipechef.png" alt="">
-          <figcaption>
-
-          </figcaption>
-        </div>
+        <img class='show-image js-modal-btn' data-video-id="384196561" src="./images/swipechef.png" alt="">
       </div>
     </div>
-
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
-
   </body>
+  <script src="scripts/color_load_on_other_pages.js"></script>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
   <script src="scripts/modal-video.js"></script>
