--- a/three.html
+++ b/three.html
@@ -24,13 +24,13 @@
     </script>
   </head>
   <body id='about-body'>
-
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
+  <script src="scripts/color_load_on_other_pages.js"></script>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
