--- a/icarebnb.html
+++ b/icarebnb.html
@@ -20,10 +20,8 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-158790792-1');
     </script>
-
   </head>
   <body id='about-body'>
     <div class='show-page-wrapper'>
@@ -31,7 +29,7 @@
         <a href="projectstwo"><h1 class='show-page-title'>ICAREBNB <span class='app-type'>[rails-app]</span></h1></a>
         <h2 class='show-tech'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         <p class='show-body-text'>Designed, implemented and shipped to production a Rails prototype app enabling charities to source temporary accommodation for those most in need. Two refugee support organisations have expressed an interest in the finished product. Features include: integrated geocoder API, pusher javascript live-chat, Algolia powered search. <br><br>
-Whether those in need of help are already homeless or at risk of being on the streets, people seeking refuge from plight in their home country, carers who need a break from the daily routine of their long term caring duties or who need to be closer to the people they are caring for. We didn’t want to limit the scope of the people you could reach. ICAREBNB’s mission is to connect you to those people through the great work charities already do.</p> <br>
+        Whether those in need of help are already homeless or at risk of being on the streets, people seeking refuge from plight in their home country, carers who need a break from the daily routine of their long term caring duties or who need to be closer to the people they are caring for. We didn’t want to limit the scope of the people you could reach. ICAREBNB’s mission is to connect you to those people through the great work charities already do.</p> <br>
         <a href="http://www.icarebnb.org" target="_blank"><p class='facts'>WEBSITE: WWW.ICAREBNB.ORG</p></a>
         <a href="https://github.com/oginglis/i-carebnb"  target="_blank"><p class='facts'>GITHUB REPO: WWW.GITHUB.COM/OGINGLIS/I-CAREBNB</p></a>
         <p class='facts js-modal-btn' data-video-id="384193533">VIMEO: SITE DEMO</p>
@@ -39,24 +37,17 @@ Whether those in need of help are already homeless or at risk of being on the st
         <a href="projectstwo" class='back-to-projects'><< back to projects</a>
       </div>
       <div class='show-page-images-right'>
-
-        <div>
-          <img class='show-image js-modal-btn' data-video-id="384193533" src="./images/icarebnb2.png" alt="">
-          <figcaption>
-
-          </figcaption>
-        </div>
+        <img class='show-image js-modal-btn' data-video-id="384193533" src="./images/icarebnb2.png" alt="">
       </div>
     </div>
-
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projectstwo" class='code-navbar'>CODE</a>
       <a href="about">ABOUT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
-
   </body>
+  <script src="scripts/color_load_on_other_pages.js"></script>
   <script src="scripts/code_page_color.js"></script>
   <script src="scripts/nav_bar.js"></script>
   <script src="scripts/modal-video.js"></script>
