--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,14 @@
     <div class="cards-wrapper">
       <div class='code-card'>
         <div class='main-card-text'>
+          <a href="icarebnb"><h1 class='project-title'>ESSENTIAL CRITICAL CARE <span class='app-type-projects'>[rails-app]</span></h1></a>
+          <a href="icarebnb"><h2 class='index-tech'>Ruby On Rails, Active Admin, Devise, I18n, Globalize, ES6 JavaScript </h2></a>
+          <a href="icarebnb"><p class='index-body-text'> Rails app with internationalization allowing doctors to curate teaching resources in a low resource setting.</p></a>
+        </div>
+        <p class='date'>2020</p>
+      </div>
+      <div class='code-card'>
+        <div class='main-card-text'>
           <a href="icarebnb"><h1 class='project-title'>ICAREBNB <span class='app-type-projects'>[rails-app]</span></h1></a>
           <a href="icarebnb"><h2 class='index-tech'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2></a>
           <a href="icarebnb"><p class='index-body-text'>Designed, implemented and shipped to production a Rails prototype app enabling charities to source temporary
