--- a/projectstwo.html
+++ b/projectstwo.html
@@ -25,7 +25,15 @@
   <body id='about-body'>
     <div class="project2-wrapper-all-projects">
       <div class="project2-card-wrapper">
-        <a class="image-project-link" href="icarebnb"><img class="project2-card-image" src="./images/icarebnb2.png" alt=""></a>
+        <a class="image-project-link" href="icarebnb"><img class="project2-card-image" src="./images/ecc.png" alt="show_image"></a>
+        <div class="project2-card-text-wrapper">
+          <a href="icarebnb"><h1 class='project2-card-title'>ESSENTIAL CRITICAL CARE </h1></a>
+          <a href="icarebnb"><p><span class='project2-card-app-type'>[rails-app]</span></p></a>
+          <h2 class='project2-card-techlist'>Ruby On Rails, Active Admin, Devise, I18n, Globalize, ES6 JavaScript </h2>
+        </div>
+      </div>
+      <div class="project2-card-wrapper">
+        <a class="image-project-link" href="icarebnb"><img class="project2-card-image" src="./images/icarebnb2.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="icarebnb"><h1 class='project2-card-title'>ICAREBNB </h1></a>
           <a href="icarebnb"><p><span class='project2-card-app-type'>[rails-app]</span></p></a>
@@ -33,7 +41,7 @@
         </div>
       </div>
       <div class="project2-card-wrapper">
-        <a class="image-project-link" href="food-dash"><img class="project2-card-image" src="./images/fooddash.png" alt=""></a>
+        <a class="image-project-link" href="food-dash"><img class="project2-card-image" src="./images/fooddash.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="food-dash"><h1 class='project2-card-title'>FOOD DASH </h1></a>
           <a href="food-dash"><p><span class='project2-card-app-type'>[react-app]</span></p></a>
@@ -41,7 +49,7 @@
         </div>
       </div>
       <div class="project2-card-wrapper">
-        <a class="image-project-link" href="swipe-chef"><img class="project2-card-image" src="./images/swipechef.png" alt=""></a>
+        <a class="image-project-link" href="swipe-chef"><img class="project2-card-image" src="./images/swipechef.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
          <a href="swipe-chef"> <h1 class='project2-card-title'>SWIPE CHEF </h1></a>
           <a href="swipe-chef"><p><span class='project2-card-app-type'>[web-app]</span></p></a>
@@ -49,7 +57,7 @@
         </div>
       </div>
       <div class="project2-card-wrapper">
-        <a class="image-project-link" href="javascript-challenges"><img class="project2-card-image" src="./images/js_challenges.png" alt=""></a>
+        <a class="image-project-link" href="javascript-challenges"><img class="project2-card-image" src="./images/js_challenges.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="javascript-challenges"><h1 class='project2-card-title'>ES6 CHALLENGES </h1></a>
           <a href="javascript-challenges"><p><span class='project2-card-app-type'>[code-challenge]</span></p></a>
@@ -57,7 +65,7 @@
         </div>
       </div>
       <div class="project2-card-wrapper">
-        <a class="image-project-link" href="reactvid"><img class="project2-card-image" src="./images/reactvid.png" alt=""></a>
+        <a class="image-project-link" href="reactvid"><img class="project2-card-image" src="./images/reactvid.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="reactvid"><h1 class='project2-card-title'>REACT VID </h1></a>
           <a href="reactvid"><p><span class='project2-card-app-type'>[react-app]</span></p></a>
