--- a/projectstwo.html
+++ b/projectstwo.html
@@ -27,8 +27,8 @@
       <div class="project2-card-wrapper">
         <a class="image-project-link" href="icarebnb"><img class="project2-card-image" src="./images/ecc.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
-          <a href="icarebnb"><h1 class='project2-card-title'>ESSENTIAL CRITICAL CARE </h1></a>
-          <a href="icarebnb"><p><span class='project2-card-app-type'>[rails-app]</span></p></a>
+          <a href="ecc"><h1 class='project2-card-title'>ESSENTIAL CRITICAL CARE </h1></a>
+          <a href="ecc"><p><span class='project2-card-app-type'>[rails-app]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, Active Admin, Devise, I18n, Globalize, ES6 JavaScript </h2>
         </div>
       </div>
