--- a/projectstwo.html
+++ b/projectstwo.html
@@ -25,7 +25,7 @@
   <body id='about-body'>
     <div class="project2-wrapper-all-projects">
       <div class="project2-card-wrapper">
-        <a class="image-project-link" href="icarebnb"><img class="project2-card-image" src="./images/ecc.png" alt="show_image"></a>
+        <a class="image-project-link" href="ecc"><img class="project2-card-image" src="./images/ecc.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="ecc"><h1 class='project2-card-title'>ESSENTIAL CRITICAL CARE </h1></a>
           <a href="ecc"><p><span class='project2-card-app-type'>[rails-app]</span></p></a>
