--- a/projectstwo.html
+++ b/projectstwo.html
@@ -73,6 +73,7 @@
         </div>
       </div>
     </div>
+</div>
     <div class="navbar active" id="myNavbar">
       <a class='shuffle' href="index">FULL_STACK WEB DEVELOPER</a>
       <a href="projectstwo" class='code-navbar'>CODE</a>
