--- a/projectstwo.html
+++ b/projectstwo.html
@@ -28,7 +28,7 @@
         <a class="image-project-link" href="ecc"><img class="project2-card-image" src="./images/ecc.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="ecc"><h1 class='project2-card-title'>ESSENTIAL CRITICAL CARE </h1></a>
-          <a href="ecc"><p><span class='project2-card-app-type'>[rails-app]</span></p></a>
+          <a  href="ecc"><p class= "trans"><span class='project2-card-app-type'>[rails-app]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, Active Admin, Devise, I18n, Globalize, ES6 JavaScript </h2>
         </div>
       </div>
@@ -36,7 +36,7 @@
         <a class="image-project-link" href="icarebnb"><img class="project2-card-image" src="./images/icarebnb2.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="icarebnb"><h1 class='project2-card-title'>ICAREBNB </h1></a>
-          <a href="icarebnb"><p><span class='project2-card-app-type'>[rails-app]</span></p></a>
+          <a  href="icarebnb"><p class= "trans"><span class='project2-card-app-type'>[rails-app]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         </div>
       </div>
@@ -44,7 +44,7 @@
         <a class="image-project-link" href="food-dash"><img class="project2-card-image" src="./images/fooddash.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="food-dash"><h1 class='project2-card-title'>FOOD DASH </h1></a>
-          <a href="food-dash"><p><span class='project2-card-app-type'>[react-app]</span></p></a>
+          <a  href="food-dash"><p class= "trans"><span class='project2-card-app-type'>[react-app]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         </div>
       </div>
@@ -52,7 +52,7 @@
         <a class="image-project-link" href="swipe-chef"><img class="project2-card-image" src="./images/swipechef.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
          <a href="swipe-chef"> <h1 class='project2-card-title'>SWIPE CHEF </h1></a>
-          <a href="swipe-chef"><p><span class='project2-card-app-type'>[web-app]</span></p></a>
+          <a  href="swipe-chef"><p class= "trans"><span class='project2-card-app-type'>[web-app]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         </div>
       </div>
@@ -60,7 +60,7 @@
         <a class="image-project-link" href="javascript-challenges"><img class="project2-card-image" src="./images/js_challenges.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="javascript-challenges"><h1 class='project2-card-title'>ES6 CHALLENGES </h1></a>
-          <a href="javascript-challenges"><p><span class='project2-card-app-type'>[code-challenge]</span></p></a>
+          <a  href="javascript-challenges"><p class= "trans"><span class='project2-card-app-type'>[code-challenge]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         </div>
       </div>
@@ -68,7 +68,7 @@
         <a class="image-project-link" href="reactvid"><img class="project2-card-image" src="./images/reactvid.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="reactvid"><h1 class='project2-card-title'>REACT VID </h1></a>
-          <a href="reactvid"><p><span class='project2-card-app-type'>[react-app]</span></p></a>
+          <a  href="reactvid"><p class= "trans"><span class='project2-card-app-type'>[react-app]</span></p></a>
           <h2 class='project2-card-techlist'>Ruby On Rails, ES6 JavaScript, Sql, Scss, Html, Heroku </h2>
         </div>
       </div>
