--- a/projectstwo.html
+++ b/projectstwo.html
@@ -25,6 +25,14 @@
   <body id='about-body'>
     <div class="project2-wrapper-all-projects">
       <div class="project2-card-wrapper">
+        <a class="image-project-link" href="yolk"><img class="project2-card-image" src="./images/yolkstudio.png" alt="show_image"></a>
+        <div class="project2-card-text-wrapper">
+          <a href="yolk"><h1 class='project2-card-title'>YOLK STUDIO</h1></a>
+          <a  href="yolk"><p class= "trans"><span class='project2-card-app-type'>[static-site]</span></p></a>
+          <h2 class='project2-card-techlist'>Three JS, ES6 JavaScript, Scss, Html5, Webpack </h2>
+        </div>
+      </div>
+      <div class="project2-card-wrapper">
         <a class="image-project-link" href="ecc"><img class="project2-card-image" src="./images/ecc.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="ecc"><h1 class='project2-card-title'>ESSENTIAL CRITICAL CARE </h1></a>
