--- a/midnight.html
+++ b/midnight.html
@@ -28,8 +28,8 @@
         <a href="projectstwo"><h1 class='show-page-title'>AFTER MIDNIGHT<span class='app-type'>[static-site]</span></h1></a>
         <h2 class='show-tech'>ES6 JavaScript, Scss, Html5, Webpack </h2>
         <p class='show-body-text'>Interactive portfolio site for AFTER MIDNIGHT studio.</p>
-        <a href="https://oginglis.github.io/DateAfterMidnight/" target="_blank"><p class='facts'>WEBSITE: https://oginglis.github.io/DateAfterMidnight/</p></a>
-        <a href="https://github.com/oginglis/DateAfterMidnight"  target="_blank"><p class='facts'>GITHUB REPO: https://github.com/oginglis/DateAfterMidnight</p></a>
+        <a href="https://oginglis.github.io/AfterMidnight/" target="_blank"><p class='facts'>WEBSITE: https://oginglis.github.io/AfterMidnight/</p></a>
+        <a href="https://github.com/oginglis/AfterMidnight"  target="_blank"><p class='facts'>GITHUB REPO: https://github.com/oginglis/AfterMidnight</p></a>
         <p class='date-show'>2020</p>
         <a href="projectstwo" class='back-to-projects'><< back to projects</a>
       </div>
