shakespeare site added

--- a/projectstwo.html
+++ b/projectstwo.html
@@ -25,6 +25,19 @@
   <body id='about-body'>
     <div class="project2-wrapper-all-projects">
       <div class="project2-card-wrapper">
+        <a class="image-project-link" href="shake"><img class="project2-card-image" src="./images/shake.png"
+            alt="show_image"></a>
+        <div class="project2-card-text-wrapper">
+          <a href="shake">
+            <h1 class='project2-card-title'>SHAKESPEARE</h1>
+          </a>
+          <a href="shake">
+            <p class="trans"><span class='project2-card-app-type'>[static-site]</span></p>
+          </a>
+          <h2 class='project2-card-techlist'>ES6 JavaScript, SHAKESPEARE API, Scss, Html5, Webpack </h2>
+        </div>
+      </div>
+      <div class="project2-card-wrapper">
         <a class="image-project-link" href="midnight"><img class="project2-card-image" src="./images/midnight.png" alt="show_image"></a>
         <div class="project2-card-text-wrapper">
           <a href="midnight"><h1 class='project2-card-title'>AFTER MIDNIGHT</h1></a>
